--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       MONGO_INITDB_ROOT_USERNAME: gofore
       MONGO_INITDB_ROOT_PASSWORD: gofore
   movie-manager-be-con:
-    image: "movie-manager-be"
+    build: ./be
     ports:
       - "3000:3000"
     environment:
@@ -17,7 +17,7 @@ services:
     depends_on:
       - movie-manager-mongo-con
   movie-manager-fe-con:
-    image: "movie-manager-fe"
+    build: ./fe
     ports:
       - "8080:8080"
     depends_on:
