--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,12 +14,15 @@ services:
     environment:
       MONGODB_USERNAME: gofore
       MONGODB_PASSWORD: gofore
+      APP_URL: ec2-3-76-105-215.eu-central-1.compute.amazonaws.com
     depends_on:
       - movie-manager-mongo-con
   movie-manager-fe-con:
     build: ./fe
     ports:
       - "8080:8080"
+    environment:
+      APP_URL: ec2-3-76-105-215.eu-central-1.compute.amazonaws.com
     depends_on:
       - movie-manager-be-con
 
